# notion-cli

./: Cargo.toml  README.md
src/: api.rs  config.rs  main.rs  rofi.rs
