[package]
name = "notion-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
clap = { version = "3.1.5", features = ["derive"] }
dialoguer = "0.10.0"
dirs = "4.0.0"
serde = { version = "1.0.136", features = ["derive"] }
